combine 3 part order page + login - signup

--- a/order.html
+++ b/order.html
@@ -10,12 +10,14 @@
         <div id="title">SNACK-ORDER</div>
 
         <div id="login_zone">
-            <a id="log_in" href="https://thisissand.com/">LOGIN</a>
-            <a id="sign_up" href="https://thisissand.com/">SIGNUP</a>
+            <a id="log_in" href="login.html">LOGIN</a>
+            <a id="sign_up" href="signup.html">SIGNUP</a>
+            <div class="user-zone">
             <img class="avatar" src="pikachu.jpg" alt="no avatar"> 
             <p>User :</p> 
             <p>Tel :</p> 
             <p>Address :</p> 
+            </div>
         </div>
 
         <span id="main-order">
