--- a/order.html
+++ b/order.html
@@ -5,6 +5,11 @@
         <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
         <link href="main-order-style.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="user.css">
+        <!-- Huy -->
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     </head>
     <body>
         <div id="title">SNACK-ORDER</div>
@@ -70,5 +75,59 @@
                 <input type="checkbox">
             </span>
         </span>
+
+        <!-- Huy -->
+        <div id="bill-form">
+            <h1>BILL</h1>
+            <div class="main-bill-form">
+                <div class="order-thing"> 
+                    <!-- <img class="snack-img" src="snack-bento.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
+                    <span class="price-of-snack">5000d</span>
+                    <span class="number-of-snack">1</span>
+                </div>
+                <div class="order-thing"> 
+                    <!-- <img class="snack-img" src="snack-khoaitay-ligo.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
+                    <span class="price-of-snack">5001d</span>
+                    <span class="number-of-snack">2</span>
+                </div>
+                <div class="order-thing"> 
+                    <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
+                    <span class="price-of-snack">5002d</span>
+                    <span class="number-of-snack">3</span>
+                </div>
+                <div class="order-thing"> 
+                    <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
+                    <span class="price-of-snack">5002d</span>
+                    <span class="number-of-snack">3</span>
+                </div>
+                <div class="order-thing"> 
+                    <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
+                    <span class="price-of-snack">5002d</span>
+                    <span class="number-of-snack">3</span>
+                </div>
+                <div class="order-thing"> 
+                        <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
+                    <span class="price-of-snack">5002d</span>
+                    <span class="number-of-snack">3</span>
+                </div>
+                <div class="order-thing"> 
+                        <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
+                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
+                    <span class="price-of-snack">5002d</span>
+                    <span class="number-of-snack">3</span>
+                </div>
+                <div>
+                    <span id="total-price">Total price: </span>
+                    <span id="total-price-number">15000d</span>
+                </div>
+            </div>
+            <button class="my-button" id="order-button">Order</button>
+        </div>
     </body>
 </html>
