--- a/order.html
+++ b/order.html
@@ -13,23 +13,22 @@
     </head>
     <body>
         <div id="title">SNACK-ORDER</div>
-
         <div id="login_zone">
             <a id="log_in" href="login.html">LOGIN</a>
             <a id="sign_up" href="signup.html">SIGN UP</a>
             <div class="user-zone">
-            <img class="avatar" src="pikachu.jpg" alt="no avatar"> 
-            <p>User :</p> 
-            <p>Tel :</p> 
-            <p>Address :</p> 
+            <img class="avatar" src="https://i.imgur.com/rTNSSa8.jpg" alt="User Avatar"> 
+            <p>Username: Pikachu</p> 
+            <p>Telephone: +84123456789</p> 
+            <p>Address: Some Address 123</p> 
             </div>
         </div>
 
         <span id="main-order">
-            <!-- for one snak -->
+            <!-- for one snack -->
             <!-- first -->
             <span class="one-snack">
-                <img class="snack-img" src="snack-bento.jpg" alt=" ">
+                <img class="snack-img" src="https://i.imgur.com/14LDgbZ.jpg" alt="Snack Bento ">
                 <span class="main-snack-name">
                     Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)
                 </span>
@@ -41,7 +40,7 @@
 
             <!-- second -->
             <span class="one-snack">
-                <img class="snack-img" src="snack-khoaitay-ligo.jpg" alt=" ">
+                <img class="snack-img" src="https://i.imgur.com/XGoBsQd.jpg" alt="Snack Ligo">
                 <span class="main-snack-name">
                     Bánh Snack Khoai Tây Ligo (110g)
                 </span>
@@ -53,7 +52,7 @@
 
             <!-- third -->
             <span class="one-snack">
-                <img class="snack-img" src="snack-rongbien.jpg" alt=" ">
+                <img class="snack-img" src="https://i.imgur.com/I753nx1.jpg" alt="Snack Seaweed">
                 <span class="main-snack-name">
                     Snack rong biển Tao Kae Noi Tempura vị Cay 25g
                 </span>
@@ -65,7 +64,7 @@
 
             <!-- third -->
             <span class="one-snack">
-                <img class="snack-img" src="snack-tom.jpg" alt=" ">
+                <img class="snack-img" src="https://i.imgur.com/53XhkaO.jpg" alt="Snack Shrimp ">
                 <span class="main-snack-name">
                     Bánh Snack Tôm NongShim Túi Lớn (180g)
                 </span>
@@ -81,43 +80,36 @@
             <h1>BILL</h1>
             <div class="main-bill-form">
                 <div class="order-thing"> 
-                    <!-- <img class="snack-img" src="snack-bento.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
                     <span class="price-of-snack">5000d</span>
                     <span class="number-of-snack">1</span>
                 </div>
                 <div class="order-thing"> 
-                    <!-- <img class="snack-img" src="snack-khoaitay-ligo.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
                     <span class="price-of-snack">5001d</span>
                     <span class="number-of-snack">2</span>
                 </div>
                 <div class="order-thing"> 
-                    <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
                     <span class="number-of-snack">3</span>
                 </div>
                 <div class="order-thing"> 
-                    <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
                     <span class="number-of-snack">3</span>
                 </div>
                 <div class="order-thing"> 
-                    <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
                     <span class="number-of-snack">3</span>
                 </div>
                 <div class="order-thing"> 
-                        <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
                     <span class="number-of-snack">3</span>
                 </div>
                 <div class="order-thing"> 
-                        <!-- <img class="snack-img" src="snack-rongbien.jpg" alt="x"> -->
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
                     <span class="number-of-snack">3</span>
