Change background order-page + bill

--- a/order.html
+++ b/order.html
@@ -79,45 +79,82 @@
         <div id="bill-form">
             <h1>BILL</h1>
             <div class="main-bill-form">
+
                 <div class="order-thing"> 
                     <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
                     <span class="price-of-snack">5000d</span>
-                    <span class="number-of-snack">1</span>
+                    <span class="number-of-snack">
+                        <button class="number-button">-</button>
+                        1
+                        <button class="number-button">+</button>
+                    </span>
                 </div>
+
                 <div class="order-thing"> 
                     <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
                     <span class="price-of-snack">5001d</span>
-                    <span class="number-of-snack">2</span>
+                    <span class="number-of-snack">
+                        <button class="number-button">-</button>
+                        1
+                        <button class="number-button">+</button>
+                    </span>
                 </div>
+
                 <div class="order-thing"> 
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
-                    <span class="number-of-snack">3</span>
+                    <span class="number-of-snack">
+                        <button class="number-button">-</button>
+                        1
+                        <button class="number-button">+</button>
+                    </span>
                 </div>
+
+                            
+                <div class="order-thing">             
+                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>            
+                    <span class="price-of-snack">5002d</span>
+                    <span class="number-of-snack">                                    
+                        <button class="number-button">-</button>              
+                        1 
+                        <button class="number-button">+</button>
+                    </span>
+                </div>
+
                 <div class="order-thing"> 
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
-                    <span class="number-of-snack">3</span>
+                    <span class="number-of-snack">
+                        <button class="number-button">-</button>
+                        1
+                        <button class="number-button">+</button>
+                    </span>
                 </div>
+
                 <div class="order-thing"> 
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
-                    <span class="number-of-snack">3</span>
+                    <span class="number-of-snack">
+                        <button class="number-button">-</button>
+                            1
+                        <button class="number-button">+</button>
+                    </span>
                 </div>
+
                 <div class="order-thing"> 
                     <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
                     <span class="price-of-snack">5002d</span>
-                    <span class="number-of-snack">3</span>
+                    <span class="number-of-snack">
+                        <button class="number-button">-</button>
+                        1
+                        <button class="number-button">+</button>
+                    </span>
                 </div>
-                <div class="order-thing"> 
-                    <span class="name-of-snack">Snack rong biển Tao Kae Noi Tempura vị Cay 25g</span>
-                    <span class="price-of-snack">5002d</span>
-                    <span class="number-of-snack">3</span>
-                </div>
-                <div>
-                    <span id="total-price">Total price: </span>
-                    <span id="total-price-number">15000d</span>
-                </div>
+            </div>
+            
+            <div>
+                <span id="total-price">Total price: </span>
+                <span id="total-price-number">15000d</span>
             </div>
             <button class="my-button" id="order-button">Order</button>
         </div>
