Remove the Info in Order

--- a/order.html
+++ b/order.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <div id="title">SNACK-ORDER</div>
+        <!--  
         <div id="login_zone">
             <a id="log_in" href="login.html">LOGIN</a>
             <a id="sign_up" href="signup.html">SIGN UP</a>
@@ -22,7 +23,7 @@
             <p>Telephone: +84123456789</p> 
             <p>Address: Some Address 123</p> 
             </div>
-        </div>
+        </div>-->
 
         <span id="main-order">
             <!-- for one snack -->
