--- a/order.html
+++ b/order.html
@@ -15,7 +15,7 @@
         <div id="title">
             SNACK-ORDER 
             <div id="User_bar"> 
-                <div id="user_name">Username</div> 
+                <a href="profile.html"> <div id="user_name">Username </div> </a>
                 <button>Log Out</button>
             </div>
         </div>
