--- a/login.html
+++ b/login.html
@@ -12,12 +12,14 @@
             </div>
             <div class="container">
                 <h3>Username</h3>
-                <input id="input" type="text" placeholder="&#xf007 * Username (more than 8 characters)" name="user" required>
+                <input id="inputUser" type="text" placeholder="&#xf007 * Username (more than 8 characters)" name="user" required>
                 <h3>Password</h3>
-                <input id="input" type="password" placeholder="&#xf023  * Password (8-32 characters)"  name="psw" required>
-                <div class = "button"> <a href = "order.html"> <button type="submit" id="signinbtn"> Sign In</button> </a> </div>
+                <input id="inputPassword" type="password" placeholder="&#xf023  * Password (8-32 characters)"  name="psw" required>
+                <div class = "button">  <button type="submit" id="signinbtn"> Sign In</button> </div>
                 <h4 id = "redirect-register"> Don't you have an account? <a id = "link-signup" href="signup.html"> We got you </a></h4>
             </div>
         </div>
     </body>
+
+    <script src="loginscript.js"> </script>
 </html>
