login, signup, order check

--- a/order.html
+++ b/order.html
@@ -16,7 +16,7 @@
             SNACK-ORDER 
             <div id="User_bar"> 
                 <a href="profile.html"> <div id="user_name">Username </div> </a>
-                <button>Log Out</button>
+                <button id="logOutButton">Log Out</button>
             </div>
         </div>
         <span id="main-order">
@@ -154,4 +154,6 @@
             <button class="my-button" id="order-button">Order</button>
         </div>
     </body>
+
+    <script src="orderscript.js"> </script>
 </html>
