--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
             </div>
             <div class="container">
                 <h3>Username</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Username (must be email)" name="user" required>
+                <input id="inputUser" type="text" placeholder="&#xf007 * Username (1-100 characters)" name="user" required>
                 <h3>Password</h3>
                 <input id="inputPassword" type="password" placeholder="&#xf023  * Password (1-32 characters)"  name="psw" required>
                 <div class = "button">  <button type="submit" id="signinbtn"> Sign In</button> </div>
