--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
             </div>
             <div class="container">
                 <h3>Username</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Username (must be email)" name="user" required>
+                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Username (1-100 character)" name="user" required>
                 <h3>Password</h3>
                 <input id="inputPassword" type="password" placeholder="&#xf023 * Enter Password (1-32 characters)"  name="psw" required>
                 <h3>Repeat password</h3>
