Change Description on login and signup page
Change the limit to (8-16)

--- a/signup.html
+++ b/signup.html
@@ -11,12 +11,12 @@
                <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
             </div>
             <div class="container">
-                <h3>Username</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Username (1-100 character)" name="user" required>
+                <h3>Email</h3>
+                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Email" name="user" required>
                 <h3>Password</h3>
-                <input id="inputPassword" type="password" placeholder="&#xf023 * Enter Password (1-32 characters)"  name="psw" required>
+                <input id="inputPassword" type="password" placeholder="&#xf023 * Enter Password (8-16 characters)"  name="psw" required>
                 <h3>Repeat password</h3>
-                <input id="inputRepeatPassword" type="password" placeholder="&#xf023 * Confirm Password (1-32 characters)" name="psw-repeat" required><br>
+                <input id="inputRepeatPassword" type="password" placeholder="&#xf023 * Confirm Password (8-16 characters)" name="psw-repeat" required><br>
                 <div class = "button">  <button type="submit" id="signupbtn"> Sign Up</button></div>
                 <h4 id = "redirect-login"> Do you have an account? <a id = "link-signin" href="login.html"> Sign in</a></h4>
             </div>
