--- a/login.html
+++ b/login.html
@@ -11,10 +11,10 @@
                 <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
             </div>
             <div class="container">
-                <h3>Username</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Username (1-100 characters)" name="user" required>
+                <h3>Email</h3>
+                <input id="inputUser" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
-                <input id="inputPassword" type="password" placeholder="&#xf023  * Password (1-32 characters)"  name="psw" required>
+                <input id="inputPassword" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="psw" required>
                 <div class = "button">  <button type="submit" id="signinbtn"> Sign In</button> </div>
                 <h4 id = "redirect-register"> Don't you have an account? <a id = "link-signup" href="signup.html"> We got you </a></h4>
             </div>
