Change Description on number of char for email

--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
             </div>
             <div class="container">
                 <h3>Email</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Email" name="user" required>
+                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Email (6-100 characters)" name="user" required>
                 <h3>Password</h3>
                 <input id="inputPassword" type="password" placeholder="&#xf023 * Enter Password (8-16 characters)"  name="psw" required>
                 <h3>Repeat password</h3>
