--- a/order.html
+++ b/order.html
@@ -24,10 +24,10 @@
             <!-- first -->
             <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/14LDgbZ.jpg" alt="Snack Bento ">
-                <span class="main-snack-name">
+                <span class="main-snack-name" id="snack-name-1">
                     Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)
                 </span>
-                <span class="main-snack-price">
+                <span class="main-snack-price" id="snack-price-1">
                     19.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-1" onclick="chooseSnack(1)">
@@ -36,10 +36,10 @@
             <!-- second -->
             <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/XGoBsQd.jpg" alt="Snack Ligo">
-                <span class="main-snack-name">
+                <span class="main-snack-name" id="snack-name-2">
                     Bánh Snack Khoai Tây Ligo (110g)
                 </span>
-                <span class="main-snack-price" >
+                <span class="main-snack-price" id="snack-price-2">
                     35.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-2" onclick="chooseSnack(2)">
@@ -48,10 +48,10 @@
             <!-- third -->
             <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/I753nx1.jpg" alt="Snack Seaweed">
-                <span class="main-snack-name">
+                <span class="main-snack-name" id="snack-name-3">
                     Snack rong biển Tao Kae Noi Tempura vị Cay 25g
                 </span>
-                <span class="main-snack-price">
+                <span class="main-snack-price" id="snack-price-3">
                     19.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-3" onclick="chooseSnack(3)">
@@ -60,10 +60,10 @@
             <!-- forth -->
             <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/53XhkaO.jpg" alt="Snack Shrimp ">
-                <span class="main-snack-name">
+                <span class="main-snack-name" id="snack-name-4">
                     Bánh Snack Tôm NongShim Túi Lớn (180g)
                 </span>
-                <span class="main-snack-price">
+                <span class="main-snack-price" id="snack-price-4">
                     44.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-4" onclick="chooseSnack(4)">
@@ -73,10 +73,10 @@
         <!-- Huy -->
         <div id="bill-form">
             <h1>Cart</h1>
+            
+            <div class="main-bill-form" id="still-main-bill-form">
 
-            <div class="main-bill-form">
-
-                <div class="order-thing" id="cart-1"> 
+                <!-- <div class="order-thing" id="cart-1"> 
                     <span class="name-of-snack">Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)</span>
                     <span class="price-of-snack">19.000 ₫</span>
                     <span class="number-of-snack">
@@ -115,7 +115,7 @@
                         1 
                         <button class="number-button">+</button>
                     </span>
-                </div>
+                </div> -->
 
                 
             </div>
