--- a/order.html
+++ b/order.html
@@ -14,9 +14,9 @@
     <body>
         <div id="title">
             SNACK-ORDER 
-            <div id="User_bar"> 
-                <a href="profile.html"> <div id="user_name">Username </div> </a>
-                <button id="logOutButton">Log Out</button>
+            <div id="User-bar"> 
+                <a href="profile.html"> <div id="user-name">Username </div> </a>
+                <button id="log-out-button">Log Out</button>
             </div>
         </div>
         <span id="main-order">
@@ -129,4 +129,5 @@
     </body>
 
     <script src="orderscript.js"> </script>
+    <script src="orderscript.test.js"></script>
 </html>
