beautify login page
beautify html css js code of login page

--- a/login.html
+++ b/login.html
@@ -12,11 +12,15 @@
             </div>
             <div class="container">
                 <h3>Email</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Email" name="user" required>
+                <input id="input-user" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
-                <input id="inputPassword" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="psw" required>
-                <div class = "button">  <button type="submit" id="signinbtn"> Sign In</button> </div>
-                <h4 id = "redirect-register"> Don't you have an account? <a id = "link-signup" href="signup.html"> We got you </a></h4>
+                <input id="input-password" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="psw" required>
+                <div class = "button">  
+                    <button type="submit" id="signin-button"> Sign In</button> 
+                </div>
+                <h4 id = "redirect-register"> Don't you have an account? 
+                    <a id = "link-signup" href="signup.html"> We got you </a>
+                </h4>
             </div>
         </div>
     </body>
