Beautify code Profile Page
Beautify css html js of ProfilePage

--- a/profile.html
+++ b/profile.html
@@ -15,8 +15,8 @@
             </div>
 
             <div class = "button">
-                  <button type="submit" id="changeButton"> Change</button>  
-                  <a href="order.html"> <button type="submit" id="returnButton"> Return</button>  </a>
+                  <button type="submit" id="change-button"> Change</button>  
+                  <a href="order.html"> <button type="submit" id="return-button"> Return</button>  </a>
             </div>
         </div>
     </body>
