--- a/signup.html
+++ b/signup.html
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="mainContent">
-            <div class="logoContainer">
+        <div class="main-content">
+            <div class="logo-container">
                <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
             </div>
             <div class="container">
                 <h3>Email</h3>
-                <input id="inputUser" type="text" placeholder="&#xf007 * Enter Email (6-100 characters)" name="user" required>
+                <input id="input-user" type="text" placeholder="&#xf007 * Enter Email (6-100 characters)" name="user" required>
                 <h3>Password</h3>
-                <input id="inputPassword" type="password" placeholder="&#xf023 * Enter Password (8-16 characters)"  name="password" required>
+                <input id="input-password" type="password" placeholder="&#xf023 * Enter Password (8-16 characters)"  name="password" required>
                 <h3>Repeat password</h3>
-                <input id="inputRepeatPassword" type="password" placeholder="&#xf023 * Confirm Password (8-16 characters)" name="passwordRepeat" required><br>
-                <div class = "button">  <button type="submit" id="signUpButton"> Sign Up</button></div>
-                <h4 id = "redirectLogIn"> Do you have an account? <a id = "linkSignIn" href="login.html"> Sign in</a></h4>
+                <input id="input-repeat-password" type="password" placeholder="&#xf023 * Confirm Password (8-16 characters)" name="passwordRepeat" required><br>
+                <div class = "button">  <button type="submit" id="sign-up-button"> Sign Up</button></div>
+                <h4 id = "redirect-log-in"> Do you have an account? <a id = "link-sign-in" href="login.html"> Sign in</a></h4>
             </div>
         </div>
     </body>
