fix - vinh - utility

--- a/login.html
+++ b/login.html
@@ -24,6 +24,6 @@
             </div>
         </div>
     </body>
-
+    <script src="utilityFunction.js"></script>
     <script src="loginscript.js"> </script>
 </html>
