--- a/order.html
+++ b/order.html
@@ -95,7 +95,7 @@
             <button class="my-button" id="order-button">Order</button>
         </div>
     </body>
-
+    <script src="utilityFunction.js"></script>
     <script src="orderscript.js"> </script>
     <script src="orderscript.test.js"></script>
 </html>
