--- a/profile.html
+++ b/profile.html
@@ -20,5 +20,6 @@
             </div>
         </div>
     </body>
+    <script src="utilityFunction.js"></script>
     <script src="orderscript.js"> </script>
 </html>
