--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,6 @@
             </div>
         </div>
     </body>
-
+    <script src="utilityFunction.js"></script>
     <script src="signupscript.js"> </script>
 </html>
