add telephone check

--- a/profile.html
+++ b/profile.html
@@ -31,5 +31,5 @@
         </div>
     </body>
     <script src="utilityFunction.js"></script>
-    <script src="orderscript.js"> </script>
+    <script src="profilescript.js"> </script>
 </html>
