--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
                 <h3>Email</h3>
                 <input id="input-user" type="text" placeholder="&#xf007 * Email" name="user" required>
                 <h3>Password</h3>
-                <input id="input-password" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="psw" required>
+                <input id="input-password" type="password" placeholder="&#xf023  * Password (8-16 characters)"  name="password" required>
                 <div class = "button">  
                     <button type="submit" id="signin-button"> Sign In</button> 
                 </div>
