--- a/order.html
+++ b/order.html
@@ -22,7 +22,7 @@
         <span id="main-order">
             <!-- for one snack -->
             <!-- first -->
-            <span class="one-snack">
+            <!-- <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/14LDgbZ.jpg" alt="Snack Bento ">
                 <span class="main-snack-name" id="snack-name-1">
                     Snack Mực Tẩm Gia Vị Cay Ngọt Bento (24g)
@@ -31,10 +31,10 @@
                     19.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-1" onclick="chooseSnack(1)">
-            </span>
+            </span> -->
 
             <!-- second -->
-            <span class="one-snack">
+            <!-- <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/XGoBsQd.jpg" alt="Snack Ligo">
                 <span class="main-snack-name" id="snack-name-2">
                     Bánh Snack Khoai Tây Ligo (110g)
@@ -43,10 +43,10 @@
                     35.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-2" onclick="chooseSnack(2)">
-            </span>
+            </span> -->
 
             <!-- third -->
-            <span class="one-snack">
+            <!-- <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/I753nx1.jpg" alt="Snack Seaweed">
                 <span class="main-snack-name" id="snack-name-3">
                     Snack rong biển Tao Kae Noi Tempura vị Cay 25g
@@ -55,10 +55,10 @@
                     19.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-3" onclick="chooseSnack(3)">
-            </span>
+            </span> -->
 
             <!-- forth -->
-            <span class="one-snack">
+            <!-- <span class="one-snack">
                 <img class="snack-img" src="https://i.imgur.com/53XhkaO.jpg" alt="Snack Shrimp ">
                 <span class="main-snack-name" id="snack-name-4">
                     Bánh Snack Tôm NongShim Túi Lớn (180g)
@@ -67,7 +67,7 @@
                     44.000 ₫
                 </span>
                 <input type="checkbox" id="checkbox-4" onclick="chooseSnack(4)">
-            </span>
+            </span> -->
         </span>
 
         <!-- Huy -->
