Allocating files for managing purpose

--- a/login/login.html
+++ b/login/login.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Login Account Snack Order Menu </title>
-        <link rel="stylesheet" type="text/css" href="login.css">
+        <link rel="stylesheet" type="text/css" href="../login/login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -19,11 +19,11 @@
                     <button type="submit" id="signin-button"> Sign In</button> 
                 </div>
                 <h4 id = "redirect-register"> Don't you have an account? 
-                    <a id = "link-signup" href="signup.html"> We got you </a>
+                    <a id = "link-signup" href="../signup/signup.html"> We got you </a>
                 </h4>
             </div>
         </div>
     </body>
-    <script src="utilityFunction.js"></script>
-    <script src="loginscript.js"> </script>
+    <script src="../others/utilityFunction.js"></script>
+    <script src="../login/loginscript.js"> </script>
 </html>
