--- a/main-order/order.html
+++ b/main-order/order.html
@@ -1,20 +1,20 @@
 <html>
     <head>
         <title>Order</title>
-        <link rel="stylesheet" type="text/css" href="order.css">
+        <link rel="stylesheet" type="text/css" href="../main-order/order.css">
         <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
-        <link href="main-order-style.css" rel="stylesheet" type="text/css">
+        <link href="../main-order/main-order-style.css" rel="stylesheet" type="text/css">
         <!-- Huy -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="../main-order/billstyle.css" />
     </head>
     <body>
         <div id="title">
             SNACK-ORDER 
-            <div id="User-bar"> 
-                <a href="profile.html"> <div id="user-name">Username </div> </a>
+            <div id="user-bar"> 
+                <a href="../profile/profile.html"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <button class="my-button" id="order-button">Order</button>
         </div>
     </body>
-    <script src="utilityFunction.js"></script>
-    <script src="orderscript.js"> </script>
-    <script src="orderscript.test.js"></script>
+    <script src="../others/utilityFunction.js"></script>
+    <script src="../main-order/orderscript.js"> </script>
+    <script src="../others/orderscript.test.js"></script>
 </html>
