--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Profile </title>
-        <link rel="stylesheet" type="text/css" href="profile.css">
+        <link rel="stylesheet" type="text/css" href="../profile/profile.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -25,10 +25,10 @@
             <div class = "button">
                   <button type="submit" id="change-button" onclick="goToChangeMode()"> Change</button>  
                   <button type="submit" id="save-button" onclick="goToNormalMode(true)"> Save</button>  
-                  <a href="order.html"> <button type="submit" id="return-button"> Return</button>  </a>
+                  <a href="../main-order/order.html"> <button type="submit" id="return-button"> Return</button>  </a>
             </div>
         </div>
     </body>
-    <script src="utilityFunction.js"></script>
-    <script src="profilescript.js"> </script>
+    <script src="../others/utilityFunction.js"></script>
+    <script src="../profile/profilescript.js"> </script>
 </html>
