--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Register Account Snack Order Menu </title>
-        <link rel="stylesheet" type="text/css" href="signup.css">
+        <link rel="stylesheet" type="text/css" href="../signup/signup.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -18,10 +18,10 @@
                 <h3>Repeat password</h3>
                 <input id="input-repeat-password" type="password" placeholder="&#xf023 * Confirm Password (8-16 characters)" name="passwordRepeat" required><br>
                 <div class = "button">  <button type="submit" id="sign-up-button"> Sign Up</button></div>
-                <h4 id = "redirect-log-in"> Do you have an account? <a id = "link-sign-in" href="login.html"> Sign in</a></h4>
+                <h4 id = "redirect-log-in"> Do you have an account? <a id = "link-sign-in" href="../login/login.html"> Sign in</a></h4>
             </div>
         </div>
     </body>
-    <script src="utilityFunction.js"></script>
-    <script src="signupscript.js"> </script>
+    <script src="../others/utilityFunction.js"></script>
+    <script src="../signup/signupscript.js"> </script>
 </html>
