Token Base64 Encryption and  Decryption Function

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
     <head>
         <title> Register Account Snack Order Menu </title>
         <link rel="stylesheet" type="text/css" href="../signup/signup.css">
@@ -24,4 +24,6 @@
     </body>
     <script src="../others/utilityFunction.js"></script>
     <script src="../signup/signupscript.js"> </script>
-</html>
+</html> -->
+
+<!--Documentation This Section is in development-->
