--- a/profile/profile.html
+++ b/profile/profile.html
@@ -23,9 +23,10 @@
             </div>
 
             <div class = "button">
-                  <button type="submit" id="change-button" onclick="goToChangeMode()"> Change</button>  
-                  <button type="submit" id="save-button" onclick="goToNormalMode(true)"> Save</button>  
-                  <a href="../main-order/order.html"> <button type="submit" id="return-button"> Return</button>  </a>
+                <button type="submit" id="change-button" onclick="alertUserinChangingProfile()"> Change</button>  
+                <!-- <button type="submit" id="change-button" onclick="goToChangeMode()"> Change</button>   -->
+                <button type="submit" id="save-button" onclick="goToNormalMode(true)"> Save</button>  
+                <a href="../main-order/order.html"> <button type="submit" id="return-button"> Return</button>  </a>
             </div>
         </div>
     </body>
