--- a/main-order/order.html
+++ b/main-order/order.html
@@ -62,5 +62,5 @@
     <script src="../others/utilityFunction.js"></script>
     <script src="../main-order/orderscript.js"> </script>
     <script src="../others/orderscript.test.js"></script>
-    <script src="../others/orderserver.js"></script>
+    <script src="../main-order/orderserver.js"></script>
 </html>
