Allocating files and checking

--- a/responsive-design/test-responsive.html
+++ b/responsive-design/test-responsive.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="build-column.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="off-set.css" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="build-column.css" />
+    <link rel="stylesheet" href="off-set.css"/>
 </head>
 <body>
-  <span class="cl-xs-4 cl-sm-4 cl-md-4 cl-lg-4 cl-xl-4">Testing</span>
-  <span class="cl-xs-4 cl-sm-4 cl-md-4 cl-lg-4 cl-xl-4 offset-xs-4 offset-sm-4 offset-md-4 offset-lg-4 offset-xl-4">Tested </span>
+    <div>
+        <span class="cl-xl-3">Test</span>
+        <span class="offset-xl-10">Test2</span>
+    </div>
+    <div>
+            <span class="cl-sm-1 cl-md-6 l-lg-4 cl-xl-2 off-set-sm-11" style="background-color: red " >Test</span>
+            <span class="cl-xl-4 offset-xl-3">Test2</span>
+    </div>
 </body>
 </html>
