--- a/main-order/order.html
+++ b/main-order/order.html
@@ -1,9 +1,13 @@
 <html>
     <head>
         <title>Order</title>
+        <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
+        <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="../main-order/order.css">
         <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
         <link href="../main-order/main-order-style.css" rel="stylesheet" type="text/css">
+
         <!-- Huy -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,12 +17,12 @@
     <body>
         <div id="title">
             SNACK-ORDER 
-            <div id="user-bar"> 
+            <div class="cl-md-3 offset-md-8"id="user-bar"> 
                 <a href="../profile/profile.html"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
             </div>
         </div>
-        <span id="main-order">
+        <span class="cl-md-9" id="main-order">
             <!-- for one snack -->
             <!-- first -->
             <!-- <span class="one-snack">
@@ -35,7 +39,7 @@
         </span>
 
         <!-- Huy -->
-        <div id="bill-form">
+        <div class="cl-md-3 offset-md-9" id="bill-form">
             <h1>Cart</h1>
             
             <div class="main-bill-form" id="still-main-bill-form">
