--- a/main-order/order.html
+++ b/main-order/order.html
@@ -16,13 +16,13 @@
     </head>
     <body>
         <div id="title">
-            SNACK-ORDER 
-            <div class="cl-md-3 offset-md-8"id="user-bar"> 
+            <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
+            <div class="cl-md-4 offset-md-8" id="user-bar"> 
                 <a href="../profile/profile.html"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
             </div>
         </div>
-        <span class="cl-md-9" id="main-order">
+        <span class="cl-xs-12 cl-md-9" id="main-order">
             <!-- for one snack -->
             <!-- first -->
             <!-- <span class="one-snack">
@@ -39,7 +39,7 @@
         </span>
 
         <!-- Huy -->
-        <div class="cl-md-3 offset-md-9" id="bill-form">
+        <div class="cl-xs-12 cl-md-3 offset-md-9" id="bill-form">
             <h1>Cart</h1>
             
             <div class="main-bill-form" id="still-main-bill-form">
