--- a/main-order/order.html
+++ b/main-order/order.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" type="text/css" href="../responsive-design/build-column.css">
         <link rel="stylesheet" type="text/css" href="../responsive-design/off-set.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../main-order/order.css">
+        
         <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet'>
         <link href="../main-order/main-order-style.css" rel="stylesheet" type="text/css">
 
@@ -15,8 +17,9 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../main-order/billstyle.css" />
     </head>
     <body>
-        <div id="title">
-            <img class="logo" src="https://preview.ibb.co/kzLOhp/Logo.png" >
+        <div id="title" class = "cl-xs-12">
+            <i class="fa offset-xs-1 cl-xs-1" >&#xf0c9;</i>
+            <img class="logo offset-xs-2 cl-xs-4 " src="https://preview.ibb.co/kzLOhp/Logo.png" >
             <div class="cl-md-4 offset-md-8" id="user-bar"> 
                 <a href="../profile/profile.html"> <div id="user-name">Username </div> </a>
                 <button id="log-out-button">Log Out</button>
